Test on demo server

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,12 +1,12 @@
 [buildout]
 extends = CONST_buildout.cfg
-parts += jsbuild-mobile mobile 
+#parts += jsbuild-mobile mobile 
 
 [vars]
 # instance id
 instanceid = main
 # database name
-db = demo_c2cgp
+db = cad67
 # database schema
 schema = main
 # Name of the server hosting the application
