--- a/buildout_sbrunner.cfg
+++ b/buildout_sbrunner.cfg
@@ -3,8 +3,10 @@ extends = buildout.cfg
 
 [vars]
 instanceid = sbrunner
-host = yjacolin.int.lsn.camptocamp.com
+host =  prospection-geospatial.demo-camptocamp.com
+mapserv_allow = Allow from 128.179.66.11
 appcfg = config_cg67.yaml
+apache_entrypoint = /
 
 [jsbuild]
 compress = False
