--- a/apache/mapserver.conf.in
+++ b/apache/mapserver.conf.in
@@ -1,4 +1,4 @@
-ScriptAlias /${vars:instanceid}/mapserv /usr/lib/cgi-bin/mapserv
+ScriptAlias /${vars:instanceid}/mapserv /usr/lib/cgi-bin/qgis_mapserv.fcgi
 <Location /${vars:instanceid}/mapserv>
    # If you use tilecache and want to prevent direct WMS access, uncomment 
    # the following lines:
@@ -12,6 +12,7 @@ ScriptAlias /${vars:instanceid}/mapserv /usr/lib/cgi-bin/mapserv
    # If mod_fcgid is not available, replace 'fcgid-script' by 'cgi-script' to
    # use the CGI mode.
    SetEnv MS_MAPFILE ${buildout:directory}/mapserver/c2cgeoportal.map
+   SetEnv QGIS_PROJECT_FILE ${buildout:directory}/qgisserver.qgs
    #SetEnv MS_MAPFILE_PATTERN "^${buildout:directory}/mapserver/c2cgeoportal.map$"
 </Location>
 
