Add QGIS plugin configuration

--- a/config.yaml.in
+++ b/config.yaml.in
@@ -152,3 +152,10 @@ cache:
 banner_image: banner_c2c_left.png
 banner_height: 210px
 ortho_opacity: 0
+
+qgis_plugin:
+    project_file: ${buildout:directory}/qgisserver.qgs
+    package_name: demo
+    database_uri: postgresql://${dbuser}:${dbpassword}@${dbhost}:${dbport}/${db}
+    database_schema: ${schema}
+    geodata_folder: /var/sig/demo
