--- a/mapserver/c2cgeoportal.map.in
+++ b/mapserver/c2cgeoportal.map.in
@@ -105,6 +105,7 @@ MAP
     #sigrs
     INCLUDE "sigrs/documents.map"
     INCLUDE "sigrs/global.map"
+    INCLUDE "sigrs/population.map"
 
     LAYER
       NAME "Departements"
