add layers evolution

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -32,9 +32,16 @@ cmds =
     >>> cmd = join('buildout', 'bin', 'mako')
     >>> print 'calling ' + cmd + 'mapserver'
     >>> call([cmd, 'mapserver'])
+    >>> cmd = join('buildout', 'bin', 'mako')
+    >>> print 'calling ' + cmd + 'mapserver/sigrs'
+    >>> call([cmd, 'mapserver/sigrs'])
 uninstall_cmds =
     >>> from os import path, remove
     >>> for f in glob('mapserver/*.mako'):
+    >>> print 'removing ' + f[:-5]
+    >>> remove(f[:-5])
+    >>>
+    >>> for f in glob('mapserver/sigrs/*.mako'):
     >>> print 'removing ' + f[:-5]
     >>> remove(f[:-5])
 
