add layers densite_pop11_commune

--- a/buildout_bge.cfg
+++ b/buildout_bge.cfg
@@ -1,8 +1,8 @@
 [buildout]
 extends = buildout.cfg
 parts -= fix-perm
-#         jsbuild-mobile
-#         mobile
+         jsbuild-mobile
+         mobile
 
 [vars]
 instanceid = bge_sigrs
